@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-08-15T08:09:44Z",
-  "count" : 7,
-  "count_minmax" : [ 7, 7 ],
-  "count_decinc" : [ -0, +7 ],
-  "uniques" : 6,
-  "uniques_minmax" : [ 6, 6 ],
-  "uniques_decinc" : [ -0, +6 ]
+  "timestamp" : "2023-08-15T16:09:17Z",
+  "count" : 9,
+  "count_minmax" : [ 7, 9 ],
+  "count_decinc" : [ -0, +9 ],
+  "uniques" : 8,
+  "uniques_minmax" : [ 6, 8 ],
+  "uniques_decinc" : [ -0, +8 ]
 }
