@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-08-15T08:09:44Z",
+  "timestamp" : "2023-08-15T16:09:17Z",
   "count_outdated" : 4888,
   "uniques_outdated" : 1446,
-  "count" : 5026,
-  "uniques" : 1542,
+  "count" : 5028,
+  "uniques" : 1544,
   "clones" : [
     {
       "timestamp": "2023-08-02T00:00:00Z",
@@ -115,12 +115,12 @@
     },
     {
       "timestamp": "2023-08-15T00:00:00Z",
-      "count": 7,
-      "count_minmax": [ 7, 7 ],
-      "count_decinc": [ 0, 7 ],
-      "uniques": 6,
-      "uniques_minmax": [ 6, 6 ],
-      "uniques_decinc": [ 0, 6 ]
+      "count": 9,
+      "count_minmax": [ 7, 9 ],
+      "count_decinc": [ 0, 9 ],
+      "uniques": 8,
+      "uniques_minmax": [ 6, 8 ],
+      "uniques_decinc": [ 0, 8 ]
     }
   ]
 }
