@@ -1,6 +1,6 @@
 {
-  "count": 138,
-  "uniques": 74,
+  "count": 140,
+  "uniques": 76,
   "clones": [
     {
       "timestamp": "2023-08-02T00:00:00Z",
@@ -64,8 +64,8 @@
     },
     {
       "timestamp": "2023-08-15T00:00:00Z",
-      "count": 7,
-      "uniques": 6
+      "count": 9,
+      "uniques": 8
     }
   ]
 }
