@@ -1,3 +1,12 @@
+2023-08-15T16:09:17Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5869204247 # 1819
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-15
+* notice: last 14d: unq all: 76 140
+* notice: prev accum: outdated-unq outdated-all / unq all: 1446 4888 / 1542 5026
+* notice: next accum: outdated-unq outdated-all / unq all: 1446 4888 / 1544 5028
+* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +8 +9 -0 -0 / 8 9
+* notice: removed / changed dates: [] / [2023-08-15]
+
 2023-08-15T08:09:44Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5865007941 # 1818
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-15
